Version 1.14 - 2017-11-09
Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Decline coverage when underwriting is refused
* FEA#0000 Add decision at contract level and/or coverage level
* FEA#0000 Automatic underwriting through rule engine
* FEA#0000 Module creation