@@ -1,3 +1,5 @@
+* BUG#7751 Ajout des autorisations en création, modification et en lecture sur les garanties du dossier d'analyse de risque
+
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
 
